[package]
name = "oled_ssd1306"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
tokio = { version = "0.2", features = ["sync", "time"] }
log = "0.4.11"
spidev = "0.4.0"
poor_gpio = { version = "0.1.0", git = "https://github.com/mmmpa/poor_gpio" }
eight_px_uint_eight = { git = "https://github.com/mmmpa/eight_px_uint_eight" }
