[package]
name = "oled_ssd1306"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
eight_px_uint_eight = { git = "https://github.com/mmmpa/eight_px_uint_eight" }

spidev = { version = "0.4.0", optional = true }
sysfs_gpio = { version = "0.5", optional = true }

[features]
std = ["spidev", "sysfs_gpio"]
embedded = []
